[package]
name = "cadre"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Cadre is a simple, self-hosted, high-performance, and strongly consistent remote configuration service."
repository = "https://github.com/modal-labs/cadre"
documentation = "https://docs.rs/cadre"
keywords = ["config", "web", "service", "remote"]
categories = ["development-tools", "web-programming", "config", "database"]
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
axum = "0.5.9"
home = "0.5.3"
clap = { version = "3.2.6", features = ["derive", "env"] }
tracing = "0.1.32"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
tokio = { version = "^1", features = ["full"] }
aws-config = "0.13.0"
aws-sdk-s3 = "0.13.0"
aws-sdk-secretsmanager = "0.13.0"
bytes = { version = "^1", features = ["serde"] }
async-recursion = "1.0.0"
regex = "1"