[package]
name = "cadre"
version = "0.5.4"
authors = ["Luis Capelo <luiscape@gmail.com>", "Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Cadre is a simple, self-hosted, high-performance remote configuration service."
repository = "https://github.com/modal-labs/cadre"
documentation = "https://docs.rs/cadre"
keywords = ["config", "web", "service", "remote"]
categories = ["development-tools", "web-programming", "config", "database"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
async-trait = "0.1.56"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-sdk-secretsmanager = "0.19.0"
aws-types = "0.49.0"
axum = { version = "0.5.9", features = ["headers"] }
clap = { version = "3.2.6", features = ["derive", "env"] }
fastrand = "1.7.0"
hyper = { version = "0.14.18", features = ["full"] }
parking_lot = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.11"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["test-util"] }
